--- a/sass/custom/_prepage.scss
+++ b/sass/custom/_prepage.scss
@@ -177,6 +177,7 @@ main {
   position: relative;
   width: 100%;
   height: 100%;
+  overflow: hidden;
   @include clearfix;
 
   &:before {
